Fix spacing

--- a/css/def.css
+++ b/css/def.css
@@ -12,6 +12,12 @@ html, body {
       	margin-right: auto;
       	padding-bottom: 5px;
       }
+      
+      .team {
+      	list-style: none;
+      	padding: 5px;
+      }
+      
       img.logo {
      	margin-bottom: -10px;
      	margin-right: 3px;
